<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    >

    <TextView
        android:id="@+id/title"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="44sp"
        android:gravity="center"

        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/checkout_ui"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_menu_background"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:text="@string/checkout_ui_title"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/payment_button"
        android:text="@string/payment_button_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_below="@id/checkout_ui"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_menu_background"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:layout_width="270dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/custom_ui"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/payment_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_menu_background"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:text="@string/custom_ui_title"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/version_number"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginTop="35dp"
        android:layout_below="@id/custom_ui"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>
