<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layoutActionBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorActionBar">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:padding="@dimen/_5ssp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Payment"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_14ssp"
            android:visibility="visible" />
    </RelativeLayout>


    <RelativeLayout
        android:background="@drawable/bg_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="16dp"
        android:layout_margin="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/holder_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/holder_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_holder_hint"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="#000000"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/number_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/holder_text_input_layout"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/card_number_hint"
                android:textColor="#000000"
                android:inputType="number"
                android:maxLength="20"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imgCard"
            android:visibility="gone"
            android:layout_width="50dp"
            android:layout_height="38dp"
            android:layout_below="@id/holder_text_input_layout"
            android:layout_alignParentEnd="true"
            android:background="@drawable/visa"
            android:layout_marginTop="20dp"
            ></ImageView>

        <ImageView
            android:id="@+id/payment_method_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/number_text_input_layout"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/visa"
            android:src="@drawable/visa"
            android:tint="@color/colorAccent"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expiry_month_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/number_text_input_layout"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/expiry_month_edit_text"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/card_expiry_month_hint"
                android:inputType="number"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/expiry_date_delimiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/expiry_month_text_input_layout"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@id/expiry_month_text_input_layout"
            android:layout_toRightOf="@id/expiry_month_text_input_layout"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/date_delimiter"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expiry_year_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/number_text_input_layout"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/expiry_date_delimiter"
            android:layout_toRightOf="@id/expiry_date_delimiter">

            <EditText
                android:id="@+id/expiry_year_edit_text"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/card_expiry_year_hint"
                android:inputType="number"
                android:maxLength="2"
                android:textColor="#000000"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cvv_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/number_text_input_layout"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/expiry_year_text_input_layout"
            android:layout_toRightOf="@id/expiry_year_text_input_layout">

            <EditText
                android:id="@+id/cvv_edit_text"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/card_cvv_hint"
                android:inputType="number"
                android:maxLength="4"
                android:textColor="#000000"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_pay_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cvv_text_input_layout"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_base_background"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:paddingRight="20dp"
            android:paddingBottom="15dp"
            android:text="@string/button_pay_now"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/progress_bar_custom_ui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_pay_now"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:paddingRight="20dp"
            android:paddingBottom="15dp"
            android:visibility="invisible" />

    </RelativeLayout>

</RelativeLayout>
